# variance-replication

./: .gitignore  README.md  pyproject.toml
notebooks/: Variance_Replicating_Portfolio.ipynb  Variance_Replicating_Portfolio_2.ipynb
scripts/: run_backtest.py
src/varrep/: backtest.py  config.py  loader.py  metrics.py  signals.py  variance_replication.py
